<resources>
    <string name="app_name">HepsiburadaFinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="musics">Musics</string>
    <string name="apps">Apps</string>
    <string name="books">Books</string>
    <string name="music">Music</string>
    <string name="explore">Explore</string>
    <string name="release_date">Release Date:</string>
    <string name="connection_toast">Connection problem! Please check your internet connection!</string>
    <string name="buy">Buy</string>
</resources>