<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="mainFragment"
            type="com.android.hepsiburadafinalproject.ui.fragment.MainFragment" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="clear_text"
        android:hint="@string/search"
        app:hintTextColor="@color/black_textcolor"
        android:textColorHint="@color/black_textcolor"
        android:backgroundTint="@color/search_field_background"
        android:fontFamily="@font/sfpro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_searchleadingicon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textFieldInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black_textcolor"
            android:fontFamily="@font/sfpro"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageViewPoster"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/ic_searchdoticon"
        app:layout_constraintBottom_toBottomOf="@+id/textField"
        app:layout_constraintStart_toEndOf="@+id/textField"
        app:layout_constraintTop_toTopOf="@+id/textField" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:checkedButton="@id/MoviesButton"
        app:layout_constraintTop_toBottomOf="@id/textField"
        app:layout_constraintStart_toStartOf="@id/textField"
        app:layout_constraintEnd_toEndOf="@id/textField"
        android:layout_marginTop="15dp">


        <Button
            android:id="@+id/MoviesButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textColor="@color/black_textcolor"
            android:onClick="@{()->mainFragment.moviesOnClick()}"
            android:textSize="12sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/MusicsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:textSize="12sp"
            android:onClick="@{()->mainFragment.musicOnClick()}"
            android:textColor="#1E1E1E"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/AppsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apps"
            android:textSize="12sp"
            android:onClick="@{()->mainFragment.appsOnClick()}"
            android:textColor="@color/black_textcolor"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/BooksButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/books"
            android:textSize="12sp"
            android:textColor="@color/black_textcolor"
            android:onClick="@{()->mainFragment.booksOnClick()}"
            app:cornerRadius="10dp"
            style="?attr/materialButtonOutlinedStyle"

            />
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toggleButton" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/shimmer_recycler_view" />

    <com.todkars.shimmer.ShimmerRecyclerView
        android:id="@+id/shimmer_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/exploreText"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shimmer_recycler_layout="@layout/placeholder_item"
/>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shimmer_recycler_view" />

    <TextView
        android:id="@+id/exploreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lato"
        android:text="@string/explore"
        android:textColor="@color/black_textcolor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/toggleButton"
        app:layout_constraintStart_toStartOf="@+id/toggleButton"
        app:layout_constraintTop_toBottomOf="@+id/line" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>